# ia_chimie

CM/: 1_Introduction_au_ML.md  2_CrossValidation.md  2_Operating_ML.md  3_Deep_Learning.md  GraphesML.tex  Makefile  NeuralNetworks.tex  biblio_gnn.bib
CM/Notebooks/: Cours 15 novembre.ipynb  GNN_Regression.ipynb  MLP_MNIST.ipynb  Perceptron.ipynb  Pipfile  SVM.ipynb  SVR.ipynb  decision_trees.ipynb
CM/Notebooks/.ipynb_checkpoints/: MLP_MNIST-checkpoint.ipynb  SVM-checkpoint.ipynb  decision_trees-checkpoint.ipynb
CM/archives/: CrossValidation.tex  DecisionTreesAndCo.tex  SVM.tex  biblio.bib  biblio_SVM.bib  biblio_nn.bib  macros.tex
CM/figures/: complexite.eps  ds2-kmeans.eps  ds2-kmeans2.eps  ds3-kmeans.eps  ds4-kmeans.eps  george-kmeans.eps  lena_hat.png~  spectre.eps  spectreCumul.eps
CM/pdf/: 2_Operating_ML.html
Projet/: projet_iapourlachimie.ipynb
TP/: README.md  pyproject.toml
TP/Practical/: 1_KNN.ipynb  2_TP_Decision_Tree.ipynb  TP Decision Tree.ipynb  TP SVM.ipynb  TP_Decision_Tree.ipynb  TP_NeuralNetworks.ipynb  TP_SVM.ipynb
TP/Practical/datasets/: acyclic.py  cobra.py  cobradat_nonnan.mat  tu_dataset.py  utils.py
TP/graphkit-learn/gklearn/: __init__.py
TP/graphkit-learn/gklearn/experiments/ged/stability/: edit_costs.real_data.nums_sols.ratios.IPFP.py
TP/graphkit-learn/gklearn/kernels/: treelet.py  treeletKernel.py
TP/graphkit-learn/gklearn/utils/: graph_synthesizer.py
